# code-templates

./: CMakeLists.txt
sdl2/src/: main.c
src/: CMakeLists.txt  gen_template.c  template.c
templates/sdl2/: CMakeLists.txt
templates/sdl2/src/: CMakeLists.txt
